dhall/tests/type-inference/failure/unit/NonRecordToMap.txt
Type error: error: The argument to `toMap` must be a record
 --> <current file>:1:1
  |
1 | toMap "text"
  | ^^^^^^^^^^^^ The argument to `toMap` must be a record
  |
